# fixed_analytics

./: .gitignore  Cargo.toml  README.md  codecov.yml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml  rust.yml
benches/: benchmarks.rs
src/: bounded.rs  error.rs  lib.rs  traits.rs
src/kernel/: cordic.rs  mod.rs
src/ops/: algebraic.rs  circular.rs  exponential.rs  hyperbolic.rs  mod.rs
src/tables/: chebyshev.rs  circular.rs  hyperbolic.rs  mod.rs
tests/: main.rs
tests/meta/: coverage.rs  mod.rs
tests/unit/: error.rs  mod.rs  smoke.rs  traits.rs  verification.rs
tests/unit/kernel/: cordic.rs  mod.rs
tests/unit/ops/: algebraic.rs  circular.rs  exponential.rs  hyperbolic.rs  mod.rs
tests/unit/tables/: chebyshev.rs  circular.rs  hyperbolic.rs  mod.rs
tools/accuracy-bench/: .gitignore  Cargo.toml  baseline.json
tools/accuracy-bench/src/: lib.rs  main.rs  metrics.rs  readme.rs  reference.rs  report.rs  sampling.rs
tools/accuracy-bench/src/functions/: algebraic.rs  circular.rs  exponential.rs  hyperbolic.rs  mod.rs
